Feature/principal description (#2)
* feat: principal-decription and principal image

* feat: add buttons in principal description

--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -6,4 +6,8 @@
 
   --text-principal-dark: #d7d7db;
   --background-dark: #0d1213;
+
+  --link-color: #b5c9d5;
+
+  --color-docs-border-default: #24393d;
 }
