feat: appstore segment

--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -10,4 +10,7 @@
   --link-color: #b5c9d5;
 
   --color-docs-border-default: #24393d;
+
+  --color-lime-13: #8cfb80;
+  --color-docs-border-default: #24393d;
 }
