feat: toolsCards segment

--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -13,4 +13,6 @@
 
   --color-lime-13: #8cfb80;
   --color-docs-border-default: #24393d;
+  --color-azure-10: #9db8f7;
+  --color-docs-background-surface-default: #151d1e;
 }
