--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -15,4 +15,6 @@
   --color-docs-border-default: #24393d;
   --color-azure-10: #9db8f7;
   --color-docs-background-surface-default: #151d1e;
+  --color-docs-background-surface-hover: #20292b;
+  --color-docs-text-subdued: #8a8f93;
 }
